manifests/janktm/clay/athena/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athena
  namespace: clay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: athena
  template:
    metadata:
      labels:
        app: athena
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: athena
          image: ghcr.io/janktm/jam/athena:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
