manifests/janktm/clay/athena/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athena
  namespace: clay
spec:
  selector:
    app: athena
  ports:
    - port: 80
      targetPort: 80
