manifests/janktm/clay/athena/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clay
  namespace: clay
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - clay.janktm.wuguishifu.dev
      secretName: clay-tls
  rules:
    - host: clay.janktm.wuguishifu.dev
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: saturn
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: athena
                port:
                  number: 80
